Target WildFly 12 in tests and modules

--- a/libraries.gradle
+++ b/libraries.gradle
@@ -23,7 +23,7 @@ ext {
     byteBuddyVersion = '1.6.14' // Improved JDK9 compatibility
 
     // Wildfly version targeted by module ZIP; Arquillian/Shrinkwrap versions used for CDI testing and testing the module ZIP
-    wildflyVersion = '11.0.0.Final'
+    wildflyVersion = '12.0.0.Alpha1-SNAPSHOT'
     arquillianVersion = '1.1.11.Final'
     shrinkwrapVersion = '1.2.6'
     shrinkwrapDescriptorsVersion = '2.0.0-alpha-8'
